add the google analytics script
add the script to manage google analytics and its usages in next application.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
+	  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5W2TV9VXDN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5W2TV9VXDN');
+</script>
   </head>
   <body>
     <div class="py-md-5 py-4 border-bottom">
